--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
     </tr>
     <tr>
         <td><img class="tableImage" src="Moon.png"></td>
-        <td class="cellStyle"><strong>The Moon</strong>: The only satellite (Moon) of Earth. The Moon is the 5th largest satellite in our solar system
+        <td class="cellStyle"><strong>The Moon</strong>: The only satellite (Moon) that the Earth has. The Moon is the 5th largest satellite in our solar system
         after IO of Jupiter at diameter of around 3,500 kilometers. It's distance can vary from the Earth, averaging at 384,000 kilometers.
         This was captured using my telescope and phone, single shot.</td>
     </tr>
