--- a/about.html
+++ b/about.html
@@ -22,29 +22,29 @@
     sports, kayaking, and camping. I have a <a class="pageLink pageVisited" href="https://www.linkedin.com/in/ali-mokheamer/">LinkedIn profile</a> if your curious to what
     I have done over the past few years.
     </p>
-    <table id="tablePosition">
+<table id="tablePosition">
         <caption>Pictures that I've taken with my telescope:</caption>
     <tr>
         <th>Celestial Image</th>
         <th>Celestial Description</th>
     </tr>
     <tr>
-        <td><img class="tableImage" src="Jupiter.png"></td>
+        <td><img class="tableImage" src="../../../Users/Ali/Pictures/Jupiter.png" alt="Picture of Jupiter"></td>
         <td class="cellStyle"><strong>Jupiter</strong>: The 5th planet from the Sun. It is one of the four gas giants in our solar system.
          It is the biggest planet in the solar system; so much so that it can fit all the planets inside
          itself and there's still room to spare. Jupiter is over 700 million kilometers away from the sun and over 500
          million kilometers from Earth. This was captured using my telescope and phone, stacked and processed.</td>
     </tr>
     <tr>
-        <td><img class="tableImage" src="Saturn.png"></td>
+        <td><img class="tableImage" src="../../../Users/Ali/Pictures/Saturn.png" alt="Picture of Saturn"></td>
         <td class="cellStyle"><strong>Saturn</strong>: The 6th planet from the Sun. It one of the four gas giants in our solar system.
         It is the second largest planet in our solar system and has the biggest ring system of any planet spanning 282,000 
         kilometers from end-to-end. Saturn is over 800 million kilometers away from the the Sun and over 700 million kilometers
         from Earth. This was captured using my telescope and phone, single shot.</td>
     </tr>
     <tr>
-        <td><img class="tableImage" src="Moon.png"></td>
-        <td class="cellStyle"><strong>The Moon</strong>: The only satellite (Moon) that the Earth has. The Moon is the 5th largest satellite in our solar system
+        <td><img class="tableImage" src="../../../Users/Ali/Pictures/Moon.png" alt="Picture of the Moon"></td>
+        <td class="cellStyle"><strong>The Moon</strong>: The only satellite (Moon) of Earth. The Moon is the 5th largest satellite in our solar system
         after IO of Jupiter at diameter of around 3,500 kilometers. It's distance can vary from the Earth, averaging at 384,000 kilometers.
         This was captured using my telescope and phone, single shot.</td>
     </tr>
