--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html lang="en-CA">
 <head>
 <title>About</title>
-<link rel="stylesheet" href="mokhystyles.css">
+<link rel="stylesheet" href="stylesheet.css">
 <meta name="viewport" content="width=device-width initial-scale=1.0">
 </head>
 <body>
@@ -14,36 +14,39 @@
     </ul>
 </div>
 <div id="webpage">
-    <h1>About Me</h1>
-    <p>
-    My name is Ali Mokheamer. I have a post-graduate diploma in Software Engineering which I've obtained at 
+    <h1 id="headerOneStyle">About Me</h1>
+    <!-- This paragraph tag explains some context about me and where I graduated along with a link to my LinkedIn profile -->
+    <p class="paragraphStyle">My name is Ali Mokheamer. I have a post-graduate diploma in Software Engineering which I've obtained at 
     <a class="pageLink pageVisited" href="https://www.centennialcollege.ca/programs-courses/full-time/software-engineering-technology/">Centennial College</a>.
     I have 6-months of apprenticeship experience in IT during and after my time at this college. My hobbies are: astronomy, meteorology, 
     sports, kayaking, and camping. I have a <a class="pageLink pageVisited" href="https://www.linkedin.com/in/ali-mokheamer/">LinkedIn profile</a> if your curious to what
-    I have done over the past few years.
-    </p>
-<table id="tablePosition">
+    I have done over the past few years.</p>
+    <!-- This table represents the photos that I have taken with my telescope and describes each celestial image, styled with various CSS selectors -->
+    <table id="tablePosition">
         <caption>Pictures that I've taken with my telescope:</caption>
     <tr>
         <th>Celestial Image</th>
         <th>Celestial Description</th>
     </tr>
     <tr>
-        <td><img class="tableImage" src="Jupiter.png" alt="Picture of Jupiter"></td>
+    <!-- Image of Jupiter that I've taken with my phone using an img tag -->
+        <td><img class="tableImage" src="../../../Users/Ali/Pictures/Jupiter.png" alt="Picture of Jupiter"></td>
         <td class="cellStyle"><strong>Jupiter</strong>: The 5th planet from the Sun. It is one of the four gas giants in our solar system.
          It is the biggest planet in the solar system; so much so that it can fit all the planets inside
          itself and there's still room to spare. Jupiter is over 700 million kilometers away from the sun and over 500
          million kilometers from Earth. This was captured using my telescope and phone, stacked and processed.</td>
     </tr>
     <tr>
-        <td><img class="tableImage" src="Saturn.png" alt="Picture of Saturn"></td>
+    <!-- Image of Saturn that I've taken with my phone using an img tag -->
+        <td><img class="tableImage" src="../../../Users/Ali/Pictures/Saturn.png" alt="Picture of Saturn"></td>
         <td class="cellStyle"><strong>Saturn</strong>: The 6th planet from the Sun. It one of the four gas giants in our solar system.
         It is the second largest planet in our solar system and has the biggest ring system of any planet spanning 282,000 
         kilometers from end-to-end. Saturn is over 800 million kilometers away from the the Sun and over 700 million kilometers
         from Earth. This was captured using my telescope and phone, single shot.</td>
     </tr>
     <tr>
-        <td><img class="tableImage" src="Moon.png" alt="Picture of the Moon"></td>
+    <!-- Image of the Moon that I've taken with my phone using an img tag -->
+        <td><img class="tableImage" src="../../../Users/Ali/Pictures/Moon.png" alt="Picture of the Moon"></td>
         <td class="cellStyle"><strong>The Moon</strong>: The only satellite (Moon) of Earth. The Moon is the 5th largest satellite in our solar system
         after IO of Jupiter at diameter of around 3,500 kilometers. It's distance can vary from the Earth, averaging at 384,000 kilometers.
         This was captured using my telescope and phone, single shot.</td>
@@ -51,7 +54,7 @@
     </table>
 </div>
 <footer>
-<p>Author: Ali Mokheamer; &copy; All rights reserved: Fleming College, W3Schools</p>
+<p class="paragraphStyle">Author: Ali Mokheamer; &copy; All rights reserved: Fleming College, W3Schools</p>
 </footer>
 </body>
 </html>
