--- a/coolfacts.html
+++ b/coolfacts.html
@@ -2,7 +2,7 @@
 <html lang="en-CA">
 <head>
 <title>Cool Space Facts</title>
-<link rel="stylesheet" href="mokhystyles.css">
+<link rel="stylesheet" href="stylesheet.css">
 <meta name="viewport" content="width=device-width initial-scale=1.0">
 </head>
 <body>
@@ -14,25 +14,28 @@
     </ul>
 </div>
 <div id="webpage">
-    <h1>Cool Facts</h1>
+    <h1 id="headerOneStyle">Cool Facts</h1>
+    <!-- These two section tags describe random facts that are cool to know in general, styled with CSS -->
     <section>
-    <h4>1. Did you know that: Venus is our planets twin, but opposite?!</h4>
-    <p>Venus's axis is tilted 177&deg; degrees from its northern pole, meaning North is its South and
+    <h3 id="headerThreeStyle">1. Did you know that: Venus is our planets twin, but opposite?!</h3>
+    <!--Random fact about Venus using a paragraph tag styled with CSS (uniform tag)-->
+    <p class="paragraphStyle">Venus's axis is tilted 177&deg; degrees from its northern pole, meaning North is its South and
      South is its North; it basically rotates backwards. Although Venus and the Earth of similar diameters, 
      Venus is over 20x hotter than the Earth at a staggering 475&deg;C average surface temperature compared to
      Earths' 15&deg;C temperature.</p>
     </section>
-    <!--https://www.skybrary.aero/index.php/Supercooled_Water_Droplets-->
+    <!-- https://www.skybrary.aero/index.php/Supercooled_Water_Droplets -->
     <section>
      <h4>2. Did you know that: Water in the upper troposphere and tropopause doesn't freeze below 0&deg;C?!</h4>
-     <p>As water evaporates from the Earths' surface, water vapours are sent to the upper portion of the troposphere in which
+         <!--Random fact about supercooled water using a paragraph tag styled with CSS (uniform tag)-->
+     <p class="paragraphStyle">As water evaporates from the Earths' surface, water vapours are sent to the upper portion of the troposphere in which
      clouds are created. After that, either water vapour stays in areas of the atmosphere where temperatures are above freezing or 
      they elevate higher as supercooled water where temperatures are below freezing. This is due to water molecules not completing
      a process called nucleation.</p>
     </section>
 </div>
 <footer>
-<p>Author: Ali Mokheamer; &copy; All rights reserved: Fleming College, W3Schools</p>
+<p class="paragraphStyle">Author: Ali Mokheamer; &copy; All rights reserved: Fleming College, W3Schools</p>
 </footer>
 </body>
 </html>
