--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-CA">
 <head>
 <title>Home</title>
-<link rel="stylesheet" href="stylesheet.css">
+<link rel="stylesheet" href="mokhystylesheet.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
